Grunnlag builder bygges av builders og ikke objekter direkte